--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -21,10 +21,12 @@
   <!-- Fancy Box -->
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
   <!--Font Awesome -->
-  <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+  <link href="plugins/font-awesome/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
 
@@ -33,60 +35,66 @@
 
 </head>
 
-<body class="body-wrapper">
+<bdiv class="body">
 
 
   <!--============================
 =            Banner            =
 =============================-->
   <div class="section banner-full">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6">
           <div class="image">
             <img class="img" src="images/ethercrm-mac.png" alt="Ethercrm-demo">
           </div>
         </div>
-        <div class="col-lg-6 align-self-center nopadding">
-          <div class="block">
+        <div class="col-lg-6">
+          <div class="row">
             <div class="logo">
               <a href="index.html">
-                <img width=195 height=180 src="images/Ether-sales.png" alt="ether-sales">
+                <img width=250 height=180 src="images/Ether-sales.png" alt="ether-sales" style="padding-left:50px;">
               </a>
             </div>
+          <div class=row style="text-bold" >
             <h3>Benefits of joining EtherCRM?</h3>
-            <ul>
-              <li class="glyphicon glyphicon-gbp">High levels of sales comission and re-sale fees paid.
+            </div>
+          </style>
+              <li class="glyphicon glyphicon-gbp"> High levels of sales comission and re-sale fees paid.
               </li>
-              <li class="glyphicon glyphicon-gbp">Simple and easy business submission process.
+              <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
               </li>
-              <li class="glyphicon-glyphicon-bullhorn">Sales and marketing material provided.
+              <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
               </li>
-              <li class="glyphicon-glyphicon-resize-small">Easy to sell intuitive technology, desperately needed in fincial services.
+              <li class="glyphicon-glyphicon-bullhorn"> Sales and marketing material provided.
               </li>
-              <li class="glyphicon-glyphicon-piggy-bank">Cheaper than the competion, when quoted on a like for like basis.
+              <li class="glyphicon-glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
               </li>
-              <li class="glyphicon-glyphicon-globe">Global reach, meaning more sales opportunities.
+              <li class="glyphicon-glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
               </li>
-              <li class="glyphicon-glyphicon-euro">Build your sales team to reach additional productiviy bonus.
+              <li class="glyphicon-glyphicon-globe"> Global reach, meaning more sales opportunities.
               </li>
-              <li class="glyphicon-glyphicon-level-up">Work flexability, with unlimited earning potential.
+              <li class="glyphicon-glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
               </li>
-            </ul>
-            <div class="example">
-              <h3>Why Delay??</h3>
-              <button type="button" class="btn btn-labeled btn-success text-align: justify; ">
-                <span class="btn-label">
-                  <i class="glyphicon glyphicon-thumbs-up"></i>
-                </span>Register Today
-              </button>
+              <li class="glyphicon-glyphicon-level-up"> Work flexability, with unlimited earning potential.
+              </li>
+              </style>
+              </ul>
+              <div class="example">
+                <h3>Why Delay??</h3>
+                <button type="button" class="btn btn-labeled btn-success text-align: justify;">
+                  <span class="btn-label">
+                    <i class="glyphicon glyphicon-thumbs-up"></i>
+                  </span>Register Today
+                </button>
             </div>
           </div>
+
         </div>
       </div>
     </div>
   </div>
-  </div>
+</div>
   <!--====  End of Banner  ====-->
 
 
