--- a/public/about.html
+++ b/public/about.html
@@ -315,38 +315,17 @@ v>
 				<div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
 					<div class="block-2">
 						<!-- heading -->
-						<h6>Product</h6>
-						<!-- links -->
-						<ul>
-							<li>
-								<a href="">Features</a>
-							</li>
-							<li>
-								<a href="">Testimonial</a>
-							</li>
-							<li>
-								<a href="">Pricing</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-					<div class="block-2">
-						<!-- heading -->
 						<h6>Resources</h6>
 						<!-- links -->
 						<ul>
 							<li>
-								<a href="sign-up.html">Singup</a>
+								<a href="login-client">Client Login</a>
 							</li>
 							<li>
-								<a href="sign-in.html">Login</a>
+								<a href="FAQ.html"> Help &amp; Support</a>
 							</li>
 							<li>
-								<a href="#">Help &amp; Support</a>
-							</li>
-							<li>
-								<a href="blog.html">Blog</a>
+								<a href="news.html">News &amp; Updates</a>
 							</li>
 						</ul>
 					</div>
@@ -361,34 +340,13 @@ v>
 								<a href="career.html">Career</a>
 							</li>
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="contact.html">Contact Us</a>
 							</li>
 							<li>
-								<a href="">Investor</a>
+								<a href="investors.html">Investors</a>
 							</li>
 							<li>
-								<a href="privacy.html">Terms</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-					<div class="block-2">
-						<!-- heading -->
-						<h6>Company</h6>
-						<!-- links -->
-						<ul>
-							<li>
-								<a href="">Career</a>
-							</li>
-							<li>
-								<a href="">Contact</a>
-							</li>
-							<li>
-								<a href="">Investor</a>
-							</li>
-							<li>
-								<a href="">Terms</a>
+								<a href="privacy-policy.html">Terms and Conditions</a>
 							</li>
 						</ul>
 					</div>
