--- a/public/login-sales-reg.html
+++ b/public/login-sales-reg.html
@@ -34,12 +34,12 @@
     <body>
 
         <!-- Top content -->
-        <div class="top-content">
+        <div class="top-content no-gutter">
                 <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh</button>
                 <button type="button" class="btn btn-labeled btn-danger">
             <div class="inner-bg">
                 <div class="container">
-                    <div class="row">
+                    <div class="row no-gutter">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1><strong>EtherCRM</strong> </h1>
                             <div class="description">
