--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
           <a class="nav-link" href="Our technology.html">Our technology</a>
 				</li>
 				<li class="nav-item">
-          <a class="nav-link" href="New.html">News &amp; Updates</a>
+          <a class="nav-link" href="news.html">News &amp; Updates</a>
 				</li>
         <li class="nav-item dropdown dropdown-slide">
           <a class="nav-link" href="#"  data-toggle="dropdown">FAQs
@@ -305,84 +305,6 @@
 </section>
 <!--====  End of Video Promo  ====-->
 
-<!--=================================
-=            Testimonial            =
-==================================-->
-<section class="section testimonial">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<!-- Testimonial Slider -->
-				<div class="testimonial-slider owl-carousel owl-theme">
-					<!-- Testimonial 01 -->
-					<div class="item">
-						<div class="block shadow">
-							<!-- Speech -->
-							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-							</p>
-							<!-- Person Thumb -->
-							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.png" alt="image">
-							</div>
-							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher</cite>
-						</div>
-					</div>
-					<!-- Testimonial 01 -->
-					<div class="item">
-						<div class="block shadow">
-							<!-- Speech -->
-							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-							</p>
-							<!-- Person Thumb -->
-							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.png" alt="image">
-							</div>
-							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher</cite>
-						</div>
-					</div>
-					<!-- Testimonial 01 -->
-					<div class="item">
-						<div class="block shadow">
-							<!-- Speech -->
-							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-							</p>
-							<!-- Person Thumb -->
-							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.png" alt="image">
-							</div>
-							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher</cite>
-						</div>
-					</div>
-					<!-- Testimonial 01 -->
-					<div class="item">
-						<div class="block shadow">
-							<!-- Speech -->
-							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-							</p>
-							<!-- Person Thumb -->
-							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.png" alt="image">
-							</div>
-							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher</cite>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-<!--====  End of Testimonial  ====-->
-
 <section class="call-to-action-app section bg-blue">
 	<div class="container">
 		<div class="row">
@@ -420,78 +342,75 @@
 =============================-->
 
 <footer class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-12 m-md-auto align-self-center">
-          <div class="block">
-            <a href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ethercrm-logo"></a>
-            <!-- Social Site Icons -->
-            <ul class="social-icon list-inline">
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-facebook"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-instagram"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Product</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="">Features</a></li>
-              <li><a href="">Testimonial</a></li>
-              <li><a href="">Pricing</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Resources</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="sign-up.html">Singup</a></li>
-              <li><a href="sign-in.html">Login</a></li>
-              <li><a href="#">Help &amp; Support</a></li>
-              <li><a href="blog.html">News </a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Company</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="career.html">Career</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="">Investor</a></li>
-              <li><a href="privacy.html">Terms</a></li>
-            </ul>
-          </div>
-        </div>
-         <div class="block-2">
-            <!-- heading -->
-            <h6>Company</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="">Career</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Investor</a></li>
-              <li><a href="">Terms and Conditions</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-</footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-12 m-md-auto align-self-center">
+					<div class="block">
+						<a href="index.html">
+							<img src="images/logo-footer.svg" alt="footer-logo">
+						</a>
+						<!-- Social Site Icons -->
+						<ul class="social-icon list-inline">
+							<li class="list-inline-item">
+								<a href="#">
+									<i class="tf-ion-social-facebook"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="#">
+									<i class="tf-ion-social-twitter"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="#">
+									<i class="tf-ion-social-instagram"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
+					<div class="block-2">
+						<!-- heading -->
+						<h6>Resources</h6>
+						<!-- links -->
+						<ul>
+							<li>
+								<a href="login-client">Client Login</a>
+							</li>
+							<li>
+								<a href="FAQ.html"> Help &amp; Support</a>
+							</li>
+							<li>
+								<a href="news.html">News &amp; Updates</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
+					<div class="block-2">
+						<!-- heading -->
+						<h6>Company</h6>
+						<!-- links -->
+						<ul>
+							<li>
+								<a href="career.html">Career</a>
+							</li>
+							<li>
+								<a href="contact.html">Contact Us</a>
+							</li>
+							<li>
+								<a href="investors.html">Investors</a>
+							</li>
+							<li>
+								<a href="privacy-policy.html">Terms and Conditions</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
   <!-- JAVASCRIPTS -->
   
