--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="Our technology.html">Our technology</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="New.html">News &amp; Updates</a>
+              <a class="nav-link" href="news.html">News &amp; Updates</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
               <a class="nav-link" href="#" data-toggle="dropdown">FAQs
