--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
           <a class="nav-link" href="Our technology.html">Our technology</a>
 				</li>
 				<li class="nav-item">
-          <a class="nav-link" href="news.html">News &amp; Updates</a>
+          <a class="nav-link" href="news.html">News</a>
 				</li>
         <li class="nav-item dropdown dropdown-slide">
           <a class="nav-link" href="#"  data-toggle="dropdown">FAQs
@@ -71,24 +71,36 @@
             <a class="dropdown-item" href="FAQ.html">Frequently Asked Questions</a>
             <a class="dropdown-item" href="news.html">Compliance</a>
             <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+		  </div>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="contact.html">Contact</a>
+		</li>
+		<div class="btn-group" class="align-right" style="padding-top: 15px; padding-right: 5px; padding-left: 8px; padding-bottom: 5px;">
+			<a class="btn btn-primary" href="login-client.html">
+				<i class="icon-user"></i> Client Login</a>
+			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+				<span class="icon-chevron-down"></span>
+			</a>
+			<ul class="dropdown-menu">
+				<li>
+					<a href="#">
+						<i class="icon-pencil"></i> Client Registration</a>
 				</li>
-				<div class="btn-group" class="align-right" style="padding-top: 20px; padding-right: 5px; padding-left: 1px;">
-					<a class="btn btn-primary" href="login-client.html"><i class="icon-user"></i> Client Login</a>
-					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
-					<ul class="dropdown-menu">
-							<li><a href="#"><i class="icon-pencil"></i> Client Registration</a></li>
-					</ul>
-			</div>
-			<div class="btn-group" class="align-right" style="padding-top: 20px;">
-				<a class="btn btn-primary" href="login-sales.html"><i class="icon-user"></i> Partner Login</a>
-				<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
-				<ul class="dropdown-menu">
-						<li><a href="login-sales-reg.html"><i class="icon-pencil"></i> Partner Registration</a></li>
-				</ul>
+			</ul>
+		</div>
+		<div class="btn-group" class="align-right" style="padding-top: 15px; padding-left: 8px;  padding-bottom: 5px;">
+			<a class="btn btn-primary" href="login-sales.html">
+				<i class="icon-user"></i> Partner Login</a>
+			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+				<span class="icon-chevron-down"></span>
+			</a>
+			<ul class="dropdown-menu">
+				<li>
+					<a href="login-sales-reg.html">
+						<i class="icon-pencil"></i> Partner Registration</a>
+				</li>
+			</ul>
 	  	</div>
     </div>
   </div>
