--- a/public/Our technology.html
+++ b/public/Our technology.html
@@ -89,22 +89,10 @@
 			<div class="col-lg-8 m-auto">
 				<!-- Banner Contents -->
 				<div class="block text-center">
-					<h1>The new way to Change Lifestyle</h1>
-					<p>The simple, intuitive app that makes it easy to make happy, <br>
-						manage your lifestyle, and work balances faster.
+					<h1>EtherCRM</h1>
+					<p>The real only solution for Financial Adviser and Wealth Managers <br>
+						cloud based accessible on-line at any time.
 					</p>
-					<!-- Go to App page -->
-					<ul class="list-inline app-badge">
-						<!-- Apple Store -->
-						<li class="list-inline-item">
-							<a href="#"><img src="images/app/appple-store.png" alt="Apple Store"></a>
-						</li>
-						<!-- Google Play -->
-						<li class="list-inline-item">
-							<a href="#"><img src="images/app/google-play.png" alt="Google Play"></a>
-						</li>
-					</ul>
-					<!-- Promo Video -->
 					<div class="video">
 						<img class="img-fluid shadow" src="images/thumbs/promo-video-thumbnail.png" alt="video-thumbnail">
 						<div class="video-button video-box">
@@ -150,8 +138,8 @@
 			<div class="col-lg-12">
 				<!-- Section Title -->
 				<div class="section-title">
-					<h2>What is Small Apps</h2>
-					<p>Small Apps makes it easy to stay on top of your Life Style.
+					<h2>What is ErtherCRM</h2>
+					<p>EtherCRM makes it easy to stay on top of your fincial advice business
 						No late tasks. No gimmicks.</p>
 				</div> 
 			</div>
@@ -162,20 +150,20 @@
 				<div class="service-block shadow">
 	<!-- Icon -->
 	<i class="tf-presentation"></i>
-	<h3>Lifestyle Development</h3>
-	<p>Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta. Vivamus</p>
+	<h3>No additonal Hardware Costs</h3>
+	<p>The processing power required to run the applications is supplied by the cloud provider.</p>
 </div>
 				<!-- Service 02 -->
 				<div class="service-block shadow">
 	<!-- Icon -->
 	<i class="tf-telescope"></i>
-	<h3>Impressive Support</h3>
-	<p>Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta. Vivamus</p>
+	<h3>Acessible from any location</h3>
+	<p>; rather than being restricted to installations, EtherCRM can be accessed from anywhere with an internet enabled device.</p>
 </div>
 			</div>
 			<div class="col-lg-4 m-auto">
 				<div class="app-preview">
-					<img src="images/feature/iphone.png" alt="iphone">				
+					<img src="images/ether-contacts.png" alt="ether-contacts">				
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-6 align-self-center">
@@ -183,15 +171,15 @@
 				<div class="service-block shadow">
 	<!-- Icon -->
 	<i class="tf-tools"></i>
-	<h3>UI/UX Design</h3>
-	<p>Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta. Vivamus</p>
+	<h3>Cross Device Compatability</h3>
+	<p>EtherCRM is a SaaS applications can be accessed via any internet enabled device, which makes it ideal for those who use a number of different devices, such as internet enabled phones and tablets</p>
 </div>
 				<!-- Service 04 -->
 				<div class="service-block shadow">
 	<!-- Icon -->
 	<i class="tf-strategy"></i>
-	<h3>Performance Marketing</h3>
-	<p>Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta. Vivamus</p>
+	<h3>No additional costs</h3>
+	<p>if a piece of software is only needed for a limited period then it is only paid for over that period and subscriptions can usually be halted at any time. </p>
 </div>
 			</div>
 		</div>
@@ -208,14 +196,14 @@
 			<div class="col-lg-6">
 				<!-- Feature Image -->
 				<div class="feature-image left">
-					<img class="img-fluid" src="images/feature/iphone-ipad.png" alt="iphone-ipad">
+					<img class="img-fluid" src="images/ipad01.png" alt="iphone-ipad">
 				</div>
 			</div>
 			<div class="col-lg-4 mr-auto align-self-center">
 				<!-- Feature Content -->
 				<div class="feature-content">
-					<h2>The Complete Toolkit For Task Management</h2>
-					<p>Nulla porttitor accumsan tincidunt. Vivamus suscipit tortor eget felis porttitor volutpat. Pellentesque in ipsum id orci porta dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit eget malesuada.</p>
+					<h2>Regulatory Compliance</h2>
+					<p>Ether CRM is designed to meet the regulatory requirement of the financial advice process under FCA,  MIFID, IMD and SEC regulations. Our system comes complete with due diligence and guidance so you can rest assured that JMLSG is met, AML &amp; KYC is covered .</p>
 				</div>
 			</div>
 		</div>
@@ -229,13 +217,14 @@
 				<!-- Feature Content -->
 				<div class="feature-content">
 					<h2>The Complete Toolkit For Task Management</h2>
-					<p>Nulla porttitor accumsan tincidunt. Vivamus suscipit tortor eget felis porttitor volutpat. Pellentesque in ipsum id orci porta dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit eget malesuada.</p>
+					<p>Ether CRM can send mobile alerts, e-mail reminders, SMS or in app notifications. Our alert system lets you stay connected to important tasks which need to be done. For Financial Advisers and wealth managers we know that time is critical and that you always put clients first.
+						To help better manage your time, assist you when you are on the go or simply stay organised out alert system will help you stay on course.</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
 				<!-- Feature Image -->
 				<div class="feature-image right">
-					<img class="img-fluid" src="images/feature/ipad.png" alt="ipad">
+					<img class="img-fluid" src="images/mac-screen1.png" alt="imac-ether">
 				</div>
 			</div>
 		</div>
@@ -252,8 +241,10 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section-title">
-					<h2>What is Small Apps</h2>
-					<p>Small Apps makes it easy to stay on top of your Life Style. <br>
+					<h2>Why choose EtherCRM</h2>
+					<p>A Plan to suit you<br>
+						Our competitive rates give you the flexibility to scale up or scale down your service plan as it suits you. <br>
+						Our flexible contracts don’t tie you to a system you may choose not to use or change in the future.<br>
 						No late tasks. No gimmicks.</p>
 				</div>
 			</div>
@@ -269,9 +260,9 @@
 			<div class="col-lg-4 col-md-4">
 				<div class="app-feature text-center">
 					<!-- Heading -->
-					<h3>Creative Designs</h3>
+					<h3>Work Globally, Security covered</h3>
 					<!-- Description -->
-					<p>Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt.</p>
+					<p>Ether CRM uses the latest in security software enabling you to work globally and get the job done with no disruption to business processes.</p>
 				</div>
 			</div>
 			<!-- Feature 02-->
@@ -280,16 +271,16 @@
 					<!-- Heading -->
 					<h3>Highly Customizable</h3>
 					<!-- Description -->
-					<p>Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt.</p>
+					<p>Customise your workflow to suit your companies need. Improvement in compliance and business efficiency day 0ne</p>
 				</div>
 			</div>
 			<!-- Feature 02-->
 			<div class="col-lg-4 col-md-4">
 				<div class="app-feature text-center">
 					<!-- Heading -->
-					<h3>Built For Startups</h3>
+					<h3>Built For You</h3>
 					<!-- Description -->
-					<p>Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt.</p>
+					<p>We'll be adding some new stuff to make it even more awesome, if you have any idea please let us know.</p>
 				</div>
 			</div>
 		</div>
@@ -298,30 +289,31 @@
 
 <!--====  End of App Features  ====-->
 
+
 <section class="call-to-action-app section bg-blue">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>It's Time to change your mind</h2>
-				<p>Download over 2 million humans .Get Small Apps free forever!
-					<br>We say you won’t look back.</p>
+				<p>Leading technology, trusted by financial advisers and wealth managers!
+					<br>We Know you won’t look back.</p>
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="" class="btn btn-rounded-icon">
-							<i class="tf-ion-social-apple"></i>
-							Iphone
+							<i class="tf-ion-android-time"></i>
+							Save time
 						</a>
 					</li>
 					<li class="list-inline-item">
 						<a href="" class="btn btn-rounded-icon">
-							<i class="tf-ion-social-android"></i>
-							Android
+							<i class="tf-ion-ios-briefcase"></i>
+							Stay compliant
 						</a>
 					</li>
 					<li class="list-inline-item">
 						<a href="" class="btn btn-rounded-icon">
-							<i class="tf-ion-social-windows"></i>
-							Windows
+							<i class="tf-ion-locked"></i>
+							Keep data secure
 						</a>
 					</li>
 				</ul>
@@ -329,74 +321,6 @@
 		</div>
 	</div>
 </section>
-
-<!--============================
-=            Footer            =
-=============================-->
-
-<footer class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-12 m-md-auto align-self-center">
-          <div class="block">
-            <a href="index.html"><img src="images/logo-footer.svg" alt="footer-logo"></a>
-            <!-- Social Site Icons -->
-            <ul class="social-icon list-inline">
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-facebook"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-instagram"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Product</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="">Features</a></li>
-              <li><a href="">Testimonial</a></li>
-              <li><a href="">Pricing</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Resources</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="sign-up.html">Singup</a></li>
-              <li><a href="sign-in.html">Login</a></li>
-              <li><a href="#">Help & Support</a></li>
-              <li><a href="blog.html">Blog</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Company</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="career.html">Career</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="">Investor</a></li>
-              <li><a href="privacy.html">Terms</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-</footer>
-
-
 
   <!-- JAVASCRIPTS -->
   
