--- a/public/about.html
+++ b/public/about.html
@@ -50,9 +50,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item dropdown active dropdown-slide">
-				<a class="nav-link" href="index.html"  data-toggle="dropdown">Home
-				</a>
-				<!-- Dropdown list -->
+				<a class="nav-link" href="index.html" data-toggle="dropdown">Home</a>
 					  <li class="nav-item">
 				<a class="nav-link" href="about.html">About</a>
 					  </li>
