--- a/public/index.html
+++ b/public/index.html
@@ -359,7 +359,7 @@
 				<div class="col-lg-4 col-md-12 m-md-auto align-self-center">
 					<div class="block">
 						<a href="index.html">
-							<img src="images/logo-footer.svg" alt="footer-logo">
+							<img src="images\EtherCRM-logo-small.png" alt="footer-logo">
 						</a>
 						<!-- Social Site Icons -->
 						<ul class="social-icon list-inline">
