--- a/public/news.html
+++ b/public/news.html
@@ -48,7 +48,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ml-auto">
-					  <li class="nav-item dropdown active dropdown-slide">
+					  <li class="nav-item dropdown dropdown-slide">
 						<a class="nav-link" href="index.html"  data-toggle="dropdown">Home
 						</a>
 						<!-- Dropdown list -->
@@ -58,7 +58,7 @@
 							  <li class="nav-item">
 						<a class="nav-link" href="Our technology.html">Our technology</a>
 							  </li>
-							  <li class="nav-item">
+							  <li class="nav-item active">
 						<a class="nav-link" href="news.html">News &amp; Updates</a>
 							  </li>
 					  <li class="nav-item dropdown dropdown-slide">
@@ -88,9 +88,9 @@
 		<div class="row">
 			<div class="col-sm-8 m-auto">
 				<!-- Page Title -->
-				<h1>Blog</h1>
+				<h1>News</h1>
 				<!-- Page Description -->
-				<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta.</p>
+				<p>Latest news and updates on EtherCRM</p>
 			</div>
 		</div>
 	</div>
@@ -114,17 +114,17 @@
 					<!-- written-content -->
 					<div class="content">
 						<!-- Post Title -->
-						<h2><a href="blog-single.html">Introducing New IOS App</a></h2>
+						<h2><a href="blog-single.html">EtherCRM now live!</a></h2>
 						<!-- Tags -->
 						<ul class="list-inline post-tag">
 							<li class="list-inline-item">
 								<img src="images/testimonial/feature-testimonial-thumb.png" alt="author-thumb">
 							</li>
 							<li class="list-inline-item">
-								<a href="#">Thomas Johnson</a>
+								<a href="#">Edwin Luther</a>
 							</li>
 							<li class="list-inline-item">
-								August 8, 2017
+								October 1, 2017
 							</li>
 						</ul>
 						<!-- Post Body -->
