--- a/public/Our technology.html
+++ b/public/Our technology.html
@@ -48,14 +48,14 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item dropdown active dropdown-slide">
+							<li class="nav-item dropdown dropdown-slide">
 								<a class="nav-link" href="index.html"  data-toggle="dropdown">Home
 								</a>
 								<!-- Dropdown list -->
 							<li class="nav-item">
 								<a class="nav-link" href="about.html">About</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a class="nav-link" href="Our technology.html">Our technology</a>
 							</li>
 							<li class="nav-item">
