--- a/public/about.html
+++ b/public/about.html
@@ -49,9 +49,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-			  <li class="nav-item dropdown active dropdown-slide">
+			  <li class="nav-item dropdown dropdown-slide">
 				<a class="nav-link" href="index.html" data-toggle="dropdown">Home</a>
-					  <li class="nav-item">
+					  <li class="nav-item active">
 				<a class="nav-link" href="about.html">About</a>
 					  </li>
 					  <li class="nav-item">
