--- a/public/contact.html
+++ b/public/contact.html
@@ -48,7 +48,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown active dropdown-slide">
+          <li class="nav-item dropdown dropdown-slide">
             <a class="nav-link" href="index.html"  data-toggle="dropdown">Home
             </a>
           <li class="nav-item">
@@ -71,7 +71,7 @@
               <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </div>
