--- a/public/news.html
+++ b/public/news.html
@@ -47,10 +47,9 @@
 					<span class="tf-ion-android-menu"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav ml-auto">
-					  <li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="index.html"  data-toggle="dropdown">Home
-						</a>
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item dropdown active dropdown-slide">
+							  <a class="nav-link"  href="index.html">Home</a>
 						<!-- Dropdown list -->
 							  <li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
@@ -90,7 +89,7 @@
 				<!-- Page Title -->
 				<h1>News</h1>
 				<!-- Page Description -->
-				<p>Latest news and updates on EtherCRM</p>
+				<p>Latest news and updates from EtherCRM</p>
 			</div>
 		</div>
 	</div>
