--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -51,9 +51,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown dropdown-slide">
-            <a class="nav-link" href="index.html" data-toggle="dropdown">Home
-            </a>
+          <li class="nav-item dropdown active dropdown-slide">
+            <a class="nav-link"  href="index.html">Home</a>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
