--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -48,7 +48,7 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNav">
 							<ul class="navbar-nav ml-auto">
-								<li class="nav-item dropdown active dropdown-slide">
+								<li class="nav-item dropdown dropdown-slide">
 									<a class="nav-link"  href="index.html">Home</a>
 								<!-- Dropdown list -->
 							<li class="nav-item">
@@ -374,73 +374,6 @@
 </section>
 
 <!--====  End of FAQ Section  ====-->
-
-<!--============================
-=            Footer            =
-=============================-->
-
-<footer class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-12 m-md-auto align-self-center">
-          <div class="block">
-            <a href="index.html"><img src="images/logo-footer.svg" alt="footer-logo"></a>
-            <!-- Social Site Icons -->
-            <ul class="social-icon list-inline">
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-facebook"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="tf-ion-social-instagram"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Product</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="">Features</a></li>
-              <li><a href="">Testimonial</a></li>
-              <li><a href="">Pricing</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Resources</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="sign-up.html">Singup</a></li>
-              <li><a href="sign-in.html">Login</a></li>
-              <li><a href="#">Help & Support</a></li>
-              <li><a href="blog.html">Blog</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
-            <!-- heading -->
-            <h6>Company</h6>
-            <!-- links -->
-            <ul>
-              <li><a href="career.html">Career</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="">Investor</a></li>
-              <li><a href="privacy.html">Terms</a></li>
-            </ul>
-          </div>
-      </div>
-    </div>
-</footer>
-
-
 
   <!-- JAVASCRIPTS -->
   
