--- a/public/news.html
+++ b/public/news.html
@@ -48,7 +48,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item dropdown active dropdown-slide">
+							<li class="nav-item dropdown dropdown-slide">
 							  <a class="nav-link"  href="index.html">Home</a>
 						<!-- Dropdown list -->
 							  <li class="nav-item">
