--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -56,45 +56,53 @@
                 <img width=250 height=180 src="images/Ether-sales.png" alt="ether-sales" style="padding-left:50px;">
               </a>
             </div>
-          <div class=row style="text-bold">
-            <h3>Benefits of joining EtherCRM?</h3>
+            <div class=row style="text-bold">
+              <h3>Benefits of joining EtherCRM?</h3>
             </div>
-          </style>
-              <li class="glyphicon glyphicon-gbp"> High levels of sales comission and re-sale fees paid.
-              </li>
-              <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
-              </li>
-              <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
-              </li>
-              <li class="glyphicon-glyphicon-bullhorn"> Sales and marketing material provided.
-              </li>
-              <li class="glyphicon-glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
-              </li>
-              <li class="glyphicon-glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
-              </li>
-              <li class="glyphicon-glyphicon-globe"> Global reach, meaning more sales opportunities.
-              </li>
-              <li class="glyphicon-glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
-              </li>
-              <li class="glyphicon-glyphicon-level-up"> Work flexability, with unlimited earning potential.
-              </li>
-              </style>
-              </ul>
-              <div class="example">
-                <h3>Why Delay??</h3>
-                <button type="button" class="btn btn-labeled btn-success text-align: justify;">
-                  <span class="btn-label">
-                    <i class="glyphicon glyphicon-thumbs-up"></i>
-                  </span>Register Today
-                </button>
+            </style>
+            <li class="glyphicon glyphicon-gbp"> High levels of sales comission and re-sale fees paid.
+            </li>
+            </br>
+            <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-bullhorn"> Sales and marketing material provided.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-globe"> Global reach, meaning more sales opportunities.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
+            </li>
+            </br>
+            <li class="glyphicon-glyphicon-level-up"> Work flexability, with unlimited earning potential.
+            </li>
+            </br>
+            </style>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <div class="example">
+              <h3>Why Delay??</h3>
+              <button type="button" class="btn btn-labeled btn-success text-align: justify;">
+                <span class="btn-label">
+                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                </span>Register Today
+              </button>
             </div>
           </div>
-
+        </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+  </div>
   <!--====  End of Banner  ====-->
 
 
@@ -111,6 +119,6 @@
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
 
   <script src="js/custom.js"></script>
-</body>
+  </body>
 
 </html>
