--- a/public/ethercrm-ad.html
+++ b/public/ethercrm-ad.html
@@ -48,29 +48,25 @@
 		<div class="row">
 			<div class="col-lg-4 justify-content-xs-center">
 				<div class="image">
-					<img class="img-fluid" src="images/feature/iphone-black.png" alt="Iphone-Black">
+					<img class="img-fluid" src="images/iphone03.png" alt="Iphone-Black">
 				</div>
 			</div>
 			<div class="col-lg-8 align-self-center">
 				<div class="block">
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.svg" alt="logo"></a>
+						<a href="index.html"><img src="images/ether-blue-signin.png" alt="logo"></a>
 					</div>
 					<h1>Introducing Game Changing 
-						<br>Lifestyle Apps</h1>
+						<br>EtherCRM</h1>
 					<p>
 						The simple, intuitive app that makes it easy 
-						<br>to make happy, manage your lifestyle,
-						<br>and work balances faster.
-					</p>
-					<ul class="list-inline app-badge">
-						<li class="list-inline-item">
-							<a href="#"><img src="images/app/appple-store.png" alt="Apple Store"></a>
-						</li>
-						<li class="list-inline-item">
-							<a href="#"><img src="images/app/google-play.png" alt="Google Play"></a>
-						</li>
-					</ul>
+						<br>to improve sales, reduce risk,
+						<br>and improve prodcutivity.
+          </p>
+          <div class="download">
+						<a href="" class="btn btn-download">Book a Demo Today 
+              <span class="tf-ion-arrow-down-c"></span> </a>
+					</div>
 					<div class="support">
 						<img class="img-fluid" src="images/icons/supported-services.png" alt="supported-services">
 					</div>
@@ -79,51 +75,6 @@
 		</div>
 	</div>
 </div>
-<!--====  End of Banner  ====-->
-
-<!--============================
-=            Footer            =
-=============================-->
-
-<footer class="footer-classic">
-    <ul class="social-icons list-inline">
-      <li class="list-inline-item">
-        <a href=""><i class="tf-ion-social-facebook"></i></a>
-      </li>
-      <li class="list-inline-item">
-        <a href=""><i class="tf-ion-social-twitter"></i></a>
-      </li>
-      <li class="list-inline-item">
-        <a href=""><i class="tf-ion-social-instagram"></i></a>
-      </li>
-      <li class="list-inline-item">
-        <a href=""><i class="tf-ion-social-dribbble"></i></a>
-      </li>
-    </ul>
-    <ul class="footer-links list-inline">
-      <li class="list-inline-item">
-        <a href="#">Download</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#">Terms</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#">Privacy</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#">Developer</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#">Support</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#">Career</a>
-      </li>
-    </ul>
-</footer>
-
-
-
   <!-- JAVASCRIPTS -->
   
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA" async defer></script>
