--- a/public/article-launch.html
+++ b/public/article-launch.html
@@ -59,10 +59,12 @@
                     <h1>Binary01 has launched a Customer Relationship Management (CRM) system EtherCRM.</h1>
                     <!-- Page Description -->
                     <p>
-                        The new CRM acts as a point of interaction between financial advisers and wealth managers and its customers. 
-                        The application contains the latest technologies and practices dedicated to Sales and Marketing and related to the business 
-                        combined with in-depth business processing workflows designed to improve regulatory compliance and relationships with customers. 
-                        It provides and compiles relevant information on them, and supports advisers and their teams in driving sales growth.
+                        The new CRM acts as a point of interaction between financial advisers and wealth managers and its customers. </br>
+                        The application contains the latest technologies and practices dedicated to Sales and Marketing and related to the business </br>
+                        combined with in-depth business processing workflows designed to improve regulatory compliance and relationships with customers. </br>
+                        It provides and compiles relevant information on them, and supports advisers and their teams in driving sales growth.</br>
+
+                        
                         
                         “We believe that it is crucial for businesses and customers within financial services to have a modern robust system, fit for purpose.
                          A system which does not cost the earth and helps businesses grow. A system built with compliance in mind to help reduce risk. Enabling advisers and wealth managers to better serve their clients and raise industry standards.” 
