--- a/public/404.html
+++ b/public/404.html
@@ -29,15 +29,16 @@
 
 </head>
 
-<body class="body-wrapper" class="hero-nature">
+<body class="body-wrapper">
 
 
 <section class="error-page">
-	<div class="center hero-nature" >
+	<div class="center full" >
 		<div class="block text-center">
-			<h1>404</h1>
-			<h3>Page Not Found</h3>
-			<p>The link you clicked may be broken or the 
+        <a href="index.html"><img src="images/ether-blue-signin.png" alt="Ether-logo"></a>
+			<h1 style="color:white;">404</h1>
+			<h3 style="color:white;" >Page Not Found</h3>
+			<p style="color:white;">The link you clicked may be broken or the 
 				<br>page may have been removed.</p>
 			<a href="index.html" class="btn btn-main">Back to homepage</a>
 		</div>
