--- a/public/about.html
+++ b/public/about.html
@@ -230,7 +230,7 @@
 					<div class="block text-center">
 						<!-- Investor Image -->
 						<div class="image shadow">
-							<img src="images/team/marketing-team-01.png" alt="investor">
+							<img src="images/edwin.jpg" alt="investor">
 						</div>
 						<!-- Company -->
 						<h3>Edwin Luther</h3>
@@ -242,7 +242,7 @@
 					<div class="block text-center">
 						<!-- Investor Image -->
 						<div class="image shadow">
-							<img src="images/team/marketing-team-01.png" alt="investor">
+							<img src="images/jono.jpg" alt="investor">
 						</div>
 						<!-- Company -->
 						<h3>Jono Forbes</h3>
@@ -267,7 +267,7 @@ v>
 					<!-- Job Description -->
 					<p>For those who want to be challenged and grow with us</p>
 					<!-- Action Button -->
-					<a href="#" class="btn btn-main">Join the team</a>
+					<a href="career.html" class="btn btn-main">Join the team</a>
 				</div>
 			</div>
 		</div>
