--- a/public/news.html
+++ b/public/news.html
@@ -243,9 +243,9 @@
 		<!-- Title -->
 		<h2>Subscribe to our Newsletter     </h2>
 	</div>
-	<div class="action-button" class="align-right">
+	<div class="action-button" class="pull-right">
 		<!-- Call Button -->
-		<a href="#" class="btn btn-main-md">Join now</a>
+		<a href="login-client.html" class="btn btn-main-md pull-right">Join now</a>
 	</div>
 </div>
 </div>
