--- a/public/ether-demo.html
+++ b/public/ether-demo.html
@@ -39,112 +39,124 @@
 
 </head>
 
-<form class="form-horizontal">
-    <fieldset>
+<body>
 
-        <!-- Form Name -->
-        <legend>EtherCRM Demo : Booking Form</legend>
+    <form class="form-horizontal">
+        <fieldset>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookdate">Preferred Date</label>
-            <div class="col-md-8">
-                <input id="bookdate" name="bookdate" type="text" placeholder="date" class="form-control input-md" required="">
+            <!-- Form Name -->
+            <legend>EtherCRM Demo : Booking Form</legend>
 
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookdate">Preferred Date</label>
+                <div class="col-md-8">
+                    <input id="bookdate" name="bookdate" type="text" placeholder="date" class="form-control input-md" required="">
+
+                </div>
             </div>
-        </div>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="coname">COMPANY / CLIENT NAME</label>
-            <div class="col-md-8">
-                <input id="coname" name="coname" type="text" placeholder="name" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="coname">COMPANY / CLIENT NAME</label>
+                <div class="col-md-8">
+                    <input id="coname" name="coname" type="text" placeholder="name" class="form-control input-md" required="">
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="coname">NUMBER OF EMPLOYEES</label>
-            <div class="col-md-8">
-                <input id="coname" name="coname" type="text" placeholder="NUMBER" class="form-control input-md" required="">
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="coname">NUMBER OF EMPLOYEES</label>
+                <div class="col-md-8">
+                    <input id="coname" name="coname" type="text" placeholder="NUMBER" class="form-control input-md" required="">
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="coname">PARTNER CODE*</label>
-            <div class="col-md-8">
-                <input id="coname" name="coname" type="text" placeholder="name of re-seller/ re-seller code" class="form-control input-md" required="">
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="coname">PARTNER CODE*</label>
+                <div class="col-md-8">
+                    <input id="coname" name="coname" type="text" placeholder="name of re-seller/ re-seller code" class="form-control input-md" required="">
+                </div>
             </div>
-        </div>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookguests">E-MAIL ADDRESS</label>
-            <div class="col-md-8">
-                <input id="bookguests" name="bookguests" type="text" placeholder="@" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookguests">E-MAIL ADDRESS</label>
+                <div class="col-md-8">
+                    <input id="bookguests" name="bookguests" type="text" placeholder="@" class="form-control input-md" required="">
 
+                </div>
             </div>
-        </div>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookmin">CURRENT CRM COST*</label>
-            <div class="col-md-8">
-                <input id="bookmin" name="bookmin" type="text" placeholder="$/£/€" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookmin">CURRENT CRM COST*</label>
+                <div class="col-md-8">
+                    <input id="bookmin" name="bookmin" type="text" placeholder="$/£/€" class="form-control input-md" required="">
 
+                </div>
             </div>
-        </div>
 
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookmobile">MOBILE</label>
-            <div class="col-md-8">
-                <input id="bookmobile" name="bookmobile" type="text" placeholder="mobile" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookmobile">MOBILE</label>
+                <div class="col-md-8">
+                    <input id="bookmobile" name="bookmobile" type="text" placeholder="mobile" class="form-control input-md" required="">
 
+                </div>
             </div>
-        </div>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="booktel">TELEPHONE</label>
-            <div class="col-md-8">
-                <input id="booktel" name="booktel" type="text" placeholder="telephone" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="booktel">TELEPHONE</label>
+                <div class="col-md-8">
+                    <input id="booktel" name="booktel" type="text" placeholder="telephone" class="form-control input-md" required="">
 
+                </div>
             </div>
-        </div>
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookeml">EMAIL</label>
-            <div class="col-md-8">
-                <input id="bookeml" name="bookeml" type="text" placeholder="email" class="form-control input-md" required="">
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookeml">EMAIL</label>
+                <div class="col-md-8">
+                    <input id="bookeml" name="bookeml" type="text" placeholder="email" class="form-control input-md" required="">
 
+                </div>
             </div>
-        </div>
 
-        <!-- Textarea -->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="bookaddress">POSTAL ADDRESS</label>
-            <div class="col-md-4">
-                <textarea class="form-control" id="bookaddress" name="bookaddress"></textarea>
+            <!-- Textarea -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="bookaddress">POSTAL ADDRESS</label>
+                <div class="col-md-4">
+                    <textarea class="form-control" id="bookaddress" name="bookaddress"></textarea>
+                </div>
             </div>
-        </div>
 
-    </fieldset>
-</form>
-<div class="col-md-12" style="padding-left:450px;">
-    <p>*Currenrt CRM cost- This will enable a calculation of cost savings specific to your organisation.</p>
-    </br>
-    <p>* All purchases must be made through an authorised re-seller, please ask you re-seller for the code.</p>
-    </br>
-    <button type="button" class="btn btn-labeled btn-success text-align: justify;">
+        </fieldset>
+    </form>
+    <div class="col-md-12" style="padding-left:300px;">
+        *Current CRM cost- This will enable a calculation of cost savings specific to your organisation.</br>
+        * All purchases must be made through an authorised re-seller, please ask you re-seller for the code.</br>
+        </br>
+        <button type="button" class="btn btn-labeled btn-success text-align: justify;" data-toggle="modal" data-target="#myModal">
         <span class="btn-label">
           <i class="glyphicon glyphicon-thumbs-up"></i>
         </span>Submit
       </button>
+        <div class="modal fade success-popup" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Thank You !</h4>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="http://osmhotels.com//assets/check-true.jpg">
+                        <p class="lead">Booking form successfully submitted. Thank you, We will get back to you soon!</p>
+                        <a href="index.html" class="rd_more btn btn-default">Go to Home</a>
+                    </div>
+                </div>
+            </div>
+        </div </body>
 
-</div>
-
-</body>
-
-</html>
+        </html
