--- a/public/investors.html
+++ b/public/investors.html
@@ -16,6 +16,34 @@
 <body>
     <div class="maintext">
         <h2> Investing in Ethercrm</h2>
+
+        95% of all businesses in the UK have fewer than 10 employees. These 5 million freelancers and micro-businesses all have one thing in common: the need to stay on top of their business finances. But this isn’t as easy as it sounds; chasing down paperwork,
+        wrestling with spreadsheets and grappling with tax returns is time-consuming and stressful. That's why we founded FreeAgent. Chart size of market Since 2007, we’ve been on a mission to democratise accounting for freelancers and micro-businesses.
+        Our award-winning, easy-to-use cloud accounting software is specifically designed for how these businesses work. FreeAgent helps them manage their business admin, gives them real-time access to their financial information and, with its unique
+        tax filing capabilities, helps them relax about tax. With an ever-evolving product and more than 40,000 enthusiastic customers, we now want to take FreeAgent to the next level and help even more freelancers and micro-businesses take control of
+        their finances. Intended impact Financial management and tax compliance is a major source of pain in time, cost and anxiety for micro-business owners who want to spend their time growing their businesses - not tackling mountains of paperwork.
+        Tweet fluidwebdev We have found that traditional accounting software can feel impenetrable and over-complicated. Usually built by accountants for accountants, it tends to be more suited to the demands of larger businesses, leaving freelancers
+        and micro-businesses out in the cold. FreeAgent is different. Easy to use and jargon-free, it’s designed specifically for micro-businesses and the way they work. FreeAgent helps them take control, and makes them feel smart - not stupid - about
+        their finances. Tweet laslopanaflex As FreeAgent is cloud-based, customers can take care of business from anywhere they have an internet connection, including their smartphone. They can: - Nail the daily admin by taking care of everything from
+        estimates, invoicing and time tracking, all the way through to tracking bank transactions, out-of-pocket expenses and payroll. - See the big picture by tracking their cash flow and profit, and staying on top of upcoming tax deadlines. - Relax
+        about tax by filing Self Assessment, VAT and RTI payroll returns directly to HMRC - many of which are completed automatically. Over 40,000 paying subscribers already use FreeAgent to manage their business finances. Our customers tell us that as
+        well as saving them time and money, FreeAgent transforms the way they think and feel about their finances. We now want to bring these benefits to the wider micro-business community and believe the impact could be huge. The Federation of Small
+        Businesses estimates the average small business spends about 12 days each year on tax administration alone. Our customers tell us that FreeAgent saves them huge amounts of time when it comes to filing their VAT and Self Assessment returns alone.
+        If we could reach all 5 million freelancers and micro-business owners in the UK, we could free up millions of days for them to grow their businesses and delight their customers. Tweet atjntc Substantial accomplishments to date We’ve built an award-winning
+        cloud accounting product, a loyal base of over 40,000 customers and a talented team of 70 employees. Team photo Most importantly, our customers tell us they love FreeAgent and that it has transformed their relationship with their finances. In
+        our most recent survey customers gave us an incredibly high Net Promoter Score of 76 - this is way above the industry average of 26, and on a par with world-leading brands like Apple. Chart nps Successes include: - Best Practice Software at the
+        British Accountancy Awards. - Multiple wins at the Software Satisfaction Awards, most recently winning both the Small Business Accounts and Expense Management categories. - Ranking in the top 20 of the Deloitte Fast50 list of the fastest-growing
+        tech companies for the past two years. - Listed in the 2014 FinTech50 rundown of Europe’s most innovative financial tech companies. - Raising more than £7M from highly-respected technology investors to accelerate our product development and growth.
+        Industry awards Monetisation strategy As a subscription-based business, we make money by charging customers a fee to use FreeAgent. To provide this service and grow the business we spend money on: - Providing, maintaining and supporting FreeAgent.
+        - Conducting marketing and sales activity to bring in new customers. - Investing in further product development. - Paying for some administrative overheads. We generate subscriptions through three channels: Direct Business owners can subscribe
+        directly to FreeAgent on a monthly recurring basis at £19, £24 or £29 per month (plus VAT) for sole traders, partnerships and limited companies respectively. We offer a 30-day free trial before users enter their payment details to start their
+        subscription. A discount is available for customers who commit to paying annually. Tweet mskadu Just as it’s hard to fill a leaky bucket, it’s difficult to grow a subscription business if lots of customers cancel, so customer churn is a key business
+        metric for us. As of March 2015, our direct customer churn was 1.5% per month, significantly below the 3.2% average for SaaS companies selling to small businesses. Low churn gives us predictable revenues and high customer lifetime value. Accountancy
+        practices Over 750 accountancy practices use the platform and we count some of the largest specialised accountancy firms for freelancers as our customers. Accountants include FreeAgent for their clients as part of their monthly accountancy fees.
+        Practices access their clients’ accounts from a single dashboard without having to log in to each account separately. Accountants also benefit from analytical tools, including exception-based reporting that highlights which clients’ accounts require
+        attention. Partner organisations FreeAgent is available on a monthly subscription basis through partner channels such as Barclays’ Bank (in their MyBusinessWorks package), and with both Lloyds and Bank of Scotland as part of their Business Toolbox
+        app store. Use of proceeds Each time we’ve raised investment finance to accelerate, we forecast to return to breakeven on those funds within 18-24 months. We’re on track to break even within this period from our existing financing and growing
+        healthily, but we think the opportunity is big enough for us to accelerate that growth even further. We’ve already built a significant, sustainable business in the UK and plan to use this investment to: Further evolution
         <div class="jquery-script-ads">
             <script type="text/javascript">
                 <!--
@@ -31,7 +59,7 @@
         </div>
     </div>
     <div id="boxes">
-        <div class="window" id="dialog" style="left: 459px; top: 256px; display: block;"> Popup Title
+        <div class="window" id="dialog" style="left: 459px; top: 256px; display: block;"> Disclaimer
             <div id="lorem">
                 <div style="height:300px;width:400px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
                     <p>Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and should be done only as part of a diversified portfolio. Please read the Risk Warnings before investing. Investments should only be
