--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <!-- CUSTOM CSS -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
 
     <!-- FAVICON -->
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -111,7 +113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 m-auto">
-                    <div class="block">
+                    <div class="block" style="padding-top:0px;">
                         <!-- Heading -->
                         <h1>The only choice for Advisers &amp; Wealth Managers</h1>
                         <!-- Sub-heading -->
@@ -123,8 +125,8 @@
 						</a>
                         </div>
                         <!-- Image -->
-                        <div class="image-content">
-                            <img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet" class="animated fadeInleftBig">
+                        <div class="image-content animated fadeInLeftBig">
+                            <img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet" class="animated fadeInLeftBig">
                         </div>
                     </div>
                 </div>
